--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=hr
 spring.datasource.password=hr
 
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
